--- a/src/app/components/ver-viajes/ver-viajes.html
+++ b/src/app/components/ver-viajes/ver-viajes.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Mis Viajes</h2>
+  <h2 style="text-align: center; color: #1e3c72;">Mis Viajes</h2>
   
   <div *ngIf="viajes.length > 0" class="viajes-container">
     <div *ngFor="let viaje of viajes; let i = index" class="viaje-card">
